# hive-mcp-gateway

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CLAUDE_INTEGRATION.md  CLAUDE_MEMORY_SNIPPET.md  DEPLOYMENT.md  Dockerfile  HANDOFF_2025_09_07.md  LICENSE  Launch_Hive_MCP_Gateway.command  MCP_BANNER_ISSUE.md  Missing Features and Fixes.md  PLAN.md  README.md  ROADMAP.md  TASKS.md  Tool Gating MCP Analysis.md  USAGE.md  anthropic_proxy_config.json  build.sh  build_macos.sh  build_universal.py  claude_desktop_config.json  correction-pass-3.md  debug_gui.py  demo.py  docker-compose.yml  fix_main_window.py  mcp-servers.json  mcp-servers.yaml  meta-mcp-proxy.ts  phase2-plan.md  pyproject.toml  pytest.ini  (+11 more)
.claude-flow/metrics/: performance.json  task-metrics.json
.plandex-v2/: projects-v2.json
.swarm/: memory.db-shm  memory.db-wal
docker/: Dockerfile  README.md  docker-compose.yml
docs/: ADDING_SERVERS.md  AI_INTEGRATION.md  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  BUILD.md  CLAUDE_INTEGRATION.md  CONTAINERIZED_MCP_PROPOSAL.md  CRITICAL_PROXY_DISCOVERY.md  DEPLOYMENT.md  DISCOVERY.md  GUI_port_tool_counts_troubleshooting.md  INTEGRATION_POINTS.md  INTEGRATION_TEST_RESULTS.md  MCP_NATIVE_USAGE.md  MCP_PROXY_ANALYSIS.md  MCP_PROXY_PRP.md  MCP_STDIO_SOLUTION.md  PROXY_ARCHITECTURE_PLAN.md  PUBLIC_RELEASE_OVERVIEW.md  SMITHERY_INTEGRATION.md  STDOUT_MCP_INTEGRATION.md  TASKS.md  TOOL_ENUMERATION.md  UI UX Fixes.md  USAGE.md  auto_registration.md  configuration.md  error_handling.md
examples/: codex-config-pymcpautogui.toml  interactive_demo.py  register_new_server.py
gui/: animated_toggle.py  autostart_manager.py  client_config_window.py  config_editor.py  create_icons.py  credential_management.py  credential_management_new.py  dependency_checker.py  ide_config_wizard.py  llm_config.py  llm_config_simple.py  main_app.py  main_window.py  mcp_clients_widget.py  notification_widget.py  oauth_dialog.py  server_card.py  service_manager.py  snippet_processor.py  system_tray.py
gui/assets/: create_banner.py  icon_resizer.py  styles.qss
monitoring/: prometheus.yml
run/: mcp_proxy_config.json
scripts/: check_mcp_tools.py  clear_and_register_puppeteer.py  debug_discover_response.py  debug_mcp_connection.py  debug_mcp_tool_names.py  debug_startup.py  demo_all_servers.py  demo_dynamic_workflow.py  final_integration_test.py  final_proxy_test.py  fix_main_window.py  full_integration_test.py  migrate_config_to_yaml.py  probe_pymcpautogui_mcp.py  register_puppeteer_tools.py  run_integration_tests.py  simple_test.py  start_server.py  test_all_servers.py  test_claude_headless.py  test_claude_mcp_integration.py  test_dynamic_tool_loading.py  test_full_proxy_flow.py  test_integration.py  test_mcp_connection.sh  test_mcp_tools.py  test_proxy_functionality.py  test_proxy_integration.py  test_puppeteer_registration.py  test_real_time_execution.py  test_server.py  test_simplified_integration.py
src/: mcp-servers.yaml
src/hive_mcp_gateway/: __init__.py  config.py  main.py
src/hive_mcp_gateway/api/: ide_endpoints.py  mcp.py  models.py  oauth_endpoints.py  tools.py
src/hive_mcp_gateway/models/: __init__.py  config.py  mcp_config.py  tool.py
src/hive_mcp_gateway/services/: __init__.py  asset_manager.py  auth_detector.py  auto_registration.py  banner_filter_client.py  banner_tolerant_stdio.py  claude_code_sdk.py  config_injector.py  config_manager.py  credential_manager.py  error_handler.py  file_watcher.py  filtered_stdio_transport.py  gating_service.py  gemini_cli_sdk.py  ide_detector.py  llm_client_manager.py  mcp_client_manager.py  mcp_connector.py  mcp_registry.py  migration_utility.py  monitoring_service.py  notification_manager.py  oauth_manager.py  piped_mcp_client.py  proxy_orchestrator.py  proxy_service.py  repository.py  stdio_filter.py  (+4 more)
src/tool_gating_mcp/: __init__.py  config.py  main.py  mcp_integration.py  mcp_server.py
tests/: __init__.py  conftest.py  run_tests.py  test_api_contracts.py  test_api_models.py  test_config_management.py  test_cross_server_integration.py  test_discovery_service.py  test_error_handling.py  test_gating_service.py  test_gui_components.py  test_ide_integration.py  test_integration.py  test_macos_functionality.py  test_main.py  test_models.py  test_multi_server_provisioning.py  test_oauth_flows.py  test_phase2_integration.py  test_proxy_integration.py  test_resource_management.py  test_system_flows.py  test_tools_api.py
tests/api/: test_proxy.py
tests/services/: test_mcp_client_manager.py  test_proxy_service.py
(+19 files in other folders)
